# CGoGN_3

cgogn/core/: CMakeLists.txt
cgogn/core/functions/mesh_ops/: volume.cpp  volume.h
cgogn/core/types/: cells_set.h
cgogn/core/ui_modules/: graph_data.h  graph_provider.h  mesh_data.h  mesh_provider.h
cgogn/geometry/: CMakeLists.txt
cgogn/geometry/algos/: laplacian.h  picking.h
cgogn/geometry/functions/: intersection.h
cgogn/geometry/ui_modules/: graph_selection.h  surface_selection.h  surface_selectionPO.h
cgogn/io/surface/: obj.h  surface_import.cpp  surface_import.h
cgogn/modeling/: CMakeLists.txt
cgogn/modeling/algos/deformation/: cage_deformation.cpp  cage_deformation.h  creation_space_tool.cpp  creation_space_tool.h  deformation_cage.cpp  deformation_cage.h  deformation_definitions.h  deformation_utils.cpp  deformation_utils.h  math_utils.cpp  math_utils.h
cgogn/modeling/apps/: CMakeLists.txt  def_global_cage_PO.cpp  def_local_tool_PO.cpp  def_local_tool_PO_update.cpp  deformationPO.cpp  multi_tools_deformation.cpp
cgogn/modeling/types/: axis_deformation_tool.h  axis_parameters.h  axis_parameters_bug.h  cage3D.h  cage_deformation_tool.h  dual_quaternion.h  global_cage_deformation_tool.h  graph_parameters.h  handle_deformation_tool-copy.h  handle_deformation_tool.h  handle_parameters.h  mesh_parameters.h  quaternion.h  ribbon_deformation_tool.h  space_deformation_tool.h  space_deformation_tool_influence_cage.h  space_tool.h
cgogn/modeling/ui_modules/: cage_deformation.h  graph_deformation-copy.h  graph_deformation.h  multi_tools_deformation-segFault.h  multi_tools_deformation.h  multi_tools_deformation_module.h  space_deformation-before-def_matrix.h  space_deformation.h  space_deformation_copy.h  space_deformation_latest_old.h  space_deformation_local.h  surface_deformation.h  surface_deformationPO.h  tubular_mesh_module.h
cgogn/rendering/: CMakeLists.txt  graph_render.cpp  graph_render.h
cgogn/rendering/apps/: CMakeLists.txt
cgogn/rendering/shaders/: shader_flat.cpp  shader_flatPO.cpp  shader_flatPO.h  shader_flat_directional.cpp  shader_flat_directional.h
cgogn/rendering/ui_modules/: graph_render.h  surface_render.h
cgogn/ui/: CMakeLists.txt  app.cpp  app_PO.cpp  app_PO.h  imgui_helpers.h  module_PO.cpp  module_PO.h  view_PO.cpp  view_PO.h
